syntax = "proto3";

package nat.pb;

message natRequest{
    string  nodeId      = 1;
    int32   privatePort = 3;
    string  zone        = 4;
    string  privateIp   = 2;
}

message natResponse{
    bool    isAfterNat  = 1;
    string  nodeId      = 2;
    string  publicIp    = 3;
    int32   publicPort  = 4;
    string  zone        = 5;
}
